--- a/Vectores/.project
+++ b/Vectores/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Vectores</name>
+	<name>Arrays-David</name>
 	<comment></comment>
 	<projects>
 	</projects>
